# push_swap

./: .gitignore  CMakeLists.txt  Makefile  Makefile_work_backup  checker  commands.txt  push_swap  test1.txt
includes/: btree.h  checker.h  commands.h  error_msg.h  get_next_line.h  push_swap.h  shift.h  stack.h
srcs/: btree.c  checker.c  checker_bonus.c  command_choice.c  commands.c  commands_stack_a.c  commands_stack_b.c  direction.c  free.c  get_next_line.c  get_next_line_utils.c  index.c  init.c  markup.c  parser.c  parser_old.c  print_commands.c  push.c  push_swap.c  reverse_rotate.c  rotate.c  stack.c  swap.c  utils.c  validator.c
test/: num_generate.py  test_10.txt  test_10_sort.txt  test_25.txt
